# LubeOil

./: .gitignore  AI blending - draft.docx  alembic.ini  pyproject.toml
alembic/: env.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Blends.tsx  Dashboard.tsx  Quality.tsx  Recipes.tsx  Tanks.tsx
src/lobp/: __init__.py  main.py
src/lobp/ai/: __init__.py  base.py  cross_recipe_learning.py  digital_twin.py  dynamic_scheduler.py  multi_supplier_optimizer.py  nlp_interface.py  optimizer.py  predictor.py  scheduler.py  soft_sensors.py
src/lobp/api/: __init__.py
src/lobp/api/v1/: __init__.py
src/lobp/api/v1/endpoints/: blends.py  health.py  quality.py  recipes.py  tanks.py
src/lobp/core/: __init__.py  config.py  security.py
src/lobp/db/: __init__.py  session.py
src/lobp/models/: __init__.py  ai_models.py  base.py  batch_history.py  blend.py  inventory.py  quality.py  recipe.py  supplier.py
src/lobp/schemas/: __init__.py  ai_models.py  batch_history.py  blend.py  common.py  inventory.py  quality.py  recipe.py  supplier.py  tank.py
src/lobp/services/: __init__.py  blend_correction_service.py  blend_service.py  campaign_service.py  costing_service.py  data_validation_service.py  energy_service.py  inventory_service.py  maintenance_service.py  model_management_service.py  quality_service.py  recipe_optimization_report_service.py  recipe_service.py  report_service.py  supplier_service.py  tank_service.py
